# metalcraft

./: .coderabbit.yaml  Cargo.toml  LICENSE  README.md  ROADMAP.md
examples/: agent_loop.rs  human_in_the_loop.rs  rig_agent.rs  spice_llm_test.rs  spice_test.rs  step_guard.rs  subgraph.rs
src/: checkpoint.rs  error.rs  events.rs  executor.rs  graph.rs  lib.rs  prebuilt.rs  tools.rs
